syntax = "proto2";

enum LoginCmd{
	INVALID_LOGIN_CMD = 0;
	eGuestLoginReq = 1;
	eGuestLoginRes = 2;
	eReLogin = 3;
	eUserLostConn = 4; 
	eEditProfileReq = 5;
	eEditProfileRes = 6;
	eAccountUpgradeReq = 7;
	eAccountUpgradeRes = 8;
	eUserLoginReq = 9;
	eUserLoginRes = 10;
	eUserUnregisterReq = 11;
	eUserUnregisterRes = 12;
}

message UserUnregisterRes{
	required int32 status = 1; 
}

message GuestLoginReq{
	required string guest_key = 1;
}


message UserCenterInfo{
	required string unick = 1;
	required int32 uface = 2;
	required int32 usex = 3;
	required int32 uvip = 4;
	required int32 uid = 5;
}

message GuestLoginRes{
	required int32 status = 1; 
	optional UserCenterInfo uinfo = 2;
}

message EditProfileReq{
	required string unick = 1;
	required int32 uface = 2;
	required int32 usex = 3;
}

message EditProfileRes{
	required int32 status = 1; 
}

message AccountUpgradeReq{
	required string uname = 1;
	required string upwd_md5 = 2;
}

message AccountUpgradeRes{
	required int32 status = 1;
}

message UserLoginReq{
	required string uname = 1;
	required string upwd_md5 = 2;
}

message UserLoginRes{
	required int32 status = 1;
	optional UserCenterInfo uinfo = 2;
}